# tt-fort

./: .gitignore  CMakeLists.txt  Heisen_20.sdv  LICENSE  Makefile  Makefile.cpu.default  Makefile.cpu.default32  Makefile.in  README.md  bt.f90  check.f90  cme20_A.sdv  cme20_u0.sdv  compile.sh  core.f90  dispmodule.f90  dlarpc.f  dmrg.f90  dmrg_fun.f90  expokit.f  gmres_3d.c  lobpcg.f90  lobpcg2.f90  lr.f90  makefile.in.old  mat.f90  matrix_util.f90  matrix_util_old.f90  maxvol.f90  nan.f90  normest.f90  ort.f90  primme_f77.h  ptype.f90  putstrmodule.F90  python_conv.f90  quad.f90  rawimg.f90  rnd.f90  say.f90  (+35 more)
.github/workflows/: c-cpp.yml
cmake/: compiler-options.cmake
expm/: dlacn1.f  dlapst.f  explib.f90  expokit.f  normest.f90  zlacn1.f
primme/: CMakeLists.txt  Complex.h  Makefile  Makefile.deps  Makefile.in  common_numerical.h  common_numerical_private.h  const.h  convergence_d.h  convergence_private_d.h  convergence_private_z.h  convergence_z.h  correction_d.h  correction_private_d.h  correction_private_z.h  correction_z.h  errors_private.h  factorize_d.h  factorize_z.h  init_d.h  init_private_d.h  init_private_z.h  init_z.h  inner_solve_d.h  inner_solve_private_d.h  inner_solve_private_z.h  inner_solve_z.h  int_redefine.h  locking_d.h  locking_private_d.h  locking_private_z.h  locking_z.h  main_iter_d.h  main_iter_private_d.h  main_iter_private_z.h  main_iter_z.h  numerical_d.h  numerical_private_d.h  numerical_z.h  ortho_d.h  (+19 more)
print/: putstrmodule.F90
